# parallel-rdp-standalone

./: CMakeLists.txt  glguts.c  parallel_imp.cpp
.github/workflows/: build.yml
